<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="40sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textStyle="italic|bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/cyan">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/label1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/label2"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingTop="15dp"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/name_imput_placeholder"
                android:textColor="@color/grey"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/grey"
                android:text="@string/password_input_placeholder"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button"
        android:layout_gravity="right"/>
</LinearLayout>